[package]
name = "cryptix-notify"
description = "Cryptix notification subsystem"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
derive_more.workspace = true
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
cryptix-addresses.workspace = true
cryptix-consensus-core.workspace = true
cryptix-core.workspace = true
cryptix-hashes.workspace = true
cryptix-txscript-errors.workspace = true
cryptix-txscript.workspace = true
cryptix-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
paste.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-serializer.workspace = true

[dev-dependencies]
criterion.workspace = true
cryptix-alloc.workspace = true
cryptix-math.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
workflow-perf-monitor.workspace = true

[[bench]]
name = "bench"
harness = false
