[package]
name = "token_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "signal"] }
num_cpus = "1.16.0"
sha3 = "0.10.8"
blake3 = "1.3"
hex = "0.4.3"
anyhow = "1.0"

# Workspace crates
cryptix-grpc-client = { path = "../rpc/grpc/client" }
cryptix-rpc-core = { path = "../rpc/core" }
cryptix-addresses = { path = "../crypto/addresses" }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
