[package]
name = "cryptix-consensus-client"
description = "Cryptix consensus client data structures"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
cryptix-addresses.workspace = true
cryptix-consensus-core.workspace = true
cryptix-hashes.workspace = true
cryptix-math.workspace = true
cryptix-txscript.workspace = true
cryptix-utils.workspace = true
cryptix-wasm-core.workspace = true

ahash.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
itertools.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints]
workspace = true
