[package]
name = "cryptix-merkle"
description = "Cryptix merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cryptix-hashes.workspace = true
