[package]
name = "cryptix-txscript"
description = "Cryptix txscript engine library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-core = []
wasm32-sdk = []

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
cfg-if.workspace = true
hexplay.workspace = true
indexmap.workspace = true
itertools.workspace = true
cryptix-addresses.workspace = true
cryptix-consensus-core.workspace = true
cryptix-hashes.workspace = true
cryptix-txscript-errors.workspace = true
cryptix-utils.workspace = true
cryptix-wasm-core.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
smallvec.workspace = true
hex.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench"
harness = false
