[package]
name = "cryptix-index-core"
description = "Cryptix index core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
cryptix-consensus-core.workspace = true
cryptix-hashes.workspace = true
cryptix-notify.workspace = true
cryptix-utils.workspace = true
log.workspace = true
paste.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true

[dev-dependencies]
# parking_lot.workspace = true
# tokio = { workspace = true, features = ["rt", "macros"] }
# rand = {workspace = true,  features = [ "small_rng" ]}