[package]
name = "cryptix-utxoindex"
description = "Cryptix UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
cryptix-consensus-core.workspace = true
cryptix-consensusmanager.workspace = true
cryptix-core.workspace = true
cryptix-database.workspace = true
cryptix-hashes.workspace = true
cryptix-index-core.workspace = true
cryptix-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
cryptix-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }
