[package]
name = "cryptix-rpc-core"
description = "Cryptix RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "cryptix-consensus-client/wasm32-sdk",
    "cryptix-consensus-wasm/wasm32-sdk"
]

[dependencies]
cryptix-addresses.workspace = true
cryptix-consensus-core.workspace = true
cryptix-consensus-client.workspace = true
cryptix-consensus-notify.workspace = true
cryptix-consensus-wasm.workspace = true
cryptix-core.workspace = true
cryptix-hashes.workspace = true
cryptix-index-core.workspace = true
cryptix-math.workspace = true
cryptix-mining-errors.workspace = true
cryptix-notify.workspace = true
cryptix-txscript.workspace = true
cryptix-utils.workspace = true
cryptix-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
