[package]
name = "cryptix-wrpc-example-subscriber"
description = "Cryptix wRPC subscription example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
cryptix-consensus-core.workspace = true
cryptix-rpc-core.workspace = true
cryptix-wrpc-client.workspace = true
cryptix-notify.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
ctrlc.workspace = true
